name:                acme-language-extensions
version:             0
synopsis:            Quchen's Stack template
description:         See README.md
homepage:            https://github.com/quchen/acme-language-extensions#readme
license:             BSD3
license-file:        LICENSE.md
author:              David »quchen« Luposchainsky <dluposchainsky+acme-language-extensions (λ) gmail>
maintainer:          David »quchen« Luposchainsky <dluposchainsky+acme-language-extensions (λ) gmail>
copyright:           David »quchen« Luposchainsky <dluposchainsky+acme-language-extensions (λ) gmail>
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
    build-depends:
          base >= 4.7 && < 5
    hs-source-dirs:      src
    exposed-modules:     Acme.LanguageExtensions
    default-language:    Haskell2010
    ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/quchen/acme-language-extensions
